SERVER-13055 disallow w:0 as getLastErrorDefaults value